# math-library

./: CMakeLists.txt  README.md
include/: math_operations.hpp  matrix.hpp
